# APACMWOffice365ManagementAPIModule

./: LICENSE  O365ManagementAPIHttpFunction.cs  Office365 ManagementAPI Sharing.pptx  README.md  ZIZHUOffice365ManagementAPI.psd1  ZIZHUOffice365ManagementAPI.psm1
ZIZHUOffice365ManagementAPI/: LICENSE  README.md  pyproject.toml
ZIZHUOffice365ManagementAPI/src/ZIZHUOffice365ManagementAPI_Python/: ZIZHUOffice365ManagementAPI.py
ZIZHUOffice365ManagementAPI/tests/: TestClient.py
